--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
     </head>
     <body>
         <h1>Unsplash API - Infinite Scroll</h1>
+        <div class="image-container" id="image-container">
+            <img
+                src="https://images.unsplash.com/photo-1592960099755-3511a9e1ae27?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60"
+                alt=""
+            />
+            <img
+                src="https://images.unsplash.com/photo-1592960099755-3511a9e1ae27?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60"
+                alt=""
+            />
+            <img
+                src="https://images.unsplash.com/photo-1592960099755-3511a9e1ae27?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60"
+                alt=""
+            />
+        </div>
         <div class="loader" id="loader" hidden>
             <img src="infinity-loader.svg" alt="Loading" />
         </div>
