--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body>
         <h1>Unsplash API - Infinite Scroll</h1>
         <div class="image-container" id="image-container"></div>
-        <div class="loader" id="loader" hidden>
+        <div class="loader" id="loader">
             <img src="infinity-loader.svg" alt="Loading" />
         </div>
         <!-- Script -->
